Development
	Updated es translation by Vicente Carro
	Change exposed dbus name to include control_id when given
	Cleanup dbus on terminate
	Swedish translation by Daniel Nylander
	Sent back Ready signal with control_id attached
0.4.3	Mar 12, 2007
	Fix pause problem when volume is changed
	Switch to using control_id for communication between browser and player
	Implement DBUS method GetCacheSize
	Implement DBUS signal SetCachePercent
	Implement more DBUS methods GetTime, GetDuration, GetPercent
	Implement more DBUS methods GetFullScreen, GetShowControls
	Implement DBUS introspection and several method calls.
	Allow setting cache size using slider bar in preferences dialog
	Fix update-po process
	DBus methods FastForward, FastReverse, Seek
	Update volume control so that we can set it before the media starts playing
	More GNOMEification
	Added Quit to the right click menu
	Changed file selector to GNOME selector (Louis-Francis Ratté-Boulianne)
0.4.2	Feb 22, 2007
	When streaming and stopped... kill the thread
	Only show media length when we know it
	Implement DBUS Signal	
		ResizeWindow int32: int32:
	Emit "Next" signal when thread is complete and embedded
	Hide ff, rew and fs buttons when width < 250 and embedded
	Set progress bar value and text correctly at end of stream
	Implement progress status (time) in progress bar
	Implement seeking by clicking on progress bar
	Detect simple playlists of rtsp and http urls 
	Fix check mark out of sync on Full Screen option
	Detect [reference] playlists makes deejay.it work
	Emit "RequestById string:" signal when after OpenButton
		is clicked and we have to request the id of the href
	Implement DBUS Signals
		OpenButton	string:url 	string:hrefid to request from caller
		SetShowControls	boolean:
	Fix embedding with metacity window manager
0.4.1 	Feb 19, 2007	
	Fix problem with status info appearing when embedded and video playing
	When running in embedded mode, emit Ready signal to com.gecko.browser