@@ -1,4 +1,5 @@
 Development
+	Send 'Cancel' signal to controlid when window closed
 	Updated es translation by Vicente Carro
 	Change exposed dbus name to include control_id when given
 	Cleanup dbus on terminate
